--- a/contact.html
+++ b/contact.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <script>
-        function handleSubmit(event) {
-            event.preventDefault(); // Prevent form from submitting
-            alert("Thank you for your response. We will soon reach out to you.");
-            // Optionally, you can clear the form fields after submission
-            document.getElementById("contactForm").reset();
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    <style>
+        body {
+            background-color: #e9f5eb; /* Background color */
         }
-    </script>
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #333;">
@@ -37,26 +35,26 @@
         </div>
     </nav>
 
-    <div class="container mt-5">
+    <div id="app" class="container mt-5">
         <h1 class="text-center" style="color: black; font-weight: bold;">Contact Us</h1>
         <p class="text-center" style="color: black; font-weight: bold;">We'd love to hear from you! Please fill out the form below.</p>
 
-        <form id="contactForm" onsubmit="handleSubmit(event)">
+        <form @submit.prevent="handleSubmit">
             <div class="form-group">
                 <label for="name" style="color: black; font-weight: bold;">Name</label>
-                <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
+                <input type="text" class="form-control" v-model="formData.name" placeholder="Enter your name" required>
             </div>
             <div class="form-group">
                 <label for="email" style="color: black; font-weight: bold;">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                <input type="email" class="form-control" v-model="formData.email" placeholder="Enter your email" required>
             </div>
             <div class="form-group">
                 <label for="phone" style="color: black; font-weight: bold;">Phone Number</label>
-                <input type="tel" class="form-control" id="phone" placeholder="Enter your phone number" required>
+                <input type="tel" class="form-control" v-model="formData.phone" placeholder="Enter your phone number" required>
             </div>
             <div class="form-group">
                 <label for="message" style="color: black; font-weight: bold;">Message</label>
-                <textarea class="form-control" id="message" rows="4" placeholder="Your message" required></textarea>
+                <textarea class="form-control" v-model="formData.message" rows="4" placeholder="Your message" required></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -70,12 +68,9 @@
         </div>
 
         <h2 class="mt-4" style="color: white; font-weight: bold;">Frequently Asked Questions</h2>
-        <div class="faq-section" style="color: white; font-weight: bold;">
-            <h5>Q: What is the best way to reach you?</h5>
-            <p>A: You can reach us through the contact form above or by emailing us directly at eventreg@gmail.com.</p>
-
-            <h5>Q: Do you offer support?</h5>
-            <p>A: Yes, we offer support through email and the contact form. Please allow 1-2 business days for a response.</p>
+        <div class="faq-section" style="color: white; font-weight: bold;" v-for="(faq, index) in faqs" :key="index">
+            <h5>Q: {{ faq.question }}</h5>
+            <p>A: {{ faq.answer }}</p>
         </div>
     </div>
 
@@ -83,5 +78,35 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    
+    <script>
+        new Vue({
+            el: '#app',
+            data: {
+                formData: {
+                    name: '',
+                    email: '',
+                    phone: '',
+                    message: ''
+                },
+                faqs: [
+                    { question: "What is the best way to reach you?", answer: "You can reach us through the contact form above or by emailing us directly at eventreg@gmail.com." },
+                    { question: "Do you offer support?", answer: "Yes, we offer support through email and the contact form. Please allow 1-2 business days for a response." }
+                ]
+            },
+            methods: {
+                handleSubmit() {
+                    alert("Thank you for your response. We will soon reach out to you.");
+                    // Reset form data
+                    this.formData = {
+                        name: '',
+                        email: '',
+                        phone: '',
+                        message: ''
+                    };
+                }
+            }
+        });
+    </script>
 </body>
 </html>
