--- a/usersign.html
+++ b/usersign.html
@@ -4,19 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vue.js Signup Form</title>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2"></script> <!-- Vue.js CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
   <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-image: url('https://img.freepik.com/premium-photo/hotel-event-conference-planning_1314467-82074.jpg');
+      background-size: cover;
+      background-position: center;
+      font-family: Arial, sans-serif;
+    }
     .signup-container {
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-color: #1d2850;
       padding: 20px;
     }
-
     .signup-form {
-      background-color: #fff;
+      background-color: rgba(255, 255, 255, 0.9);
       padding: 30px;
       border-radius: 10px;
       box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
@@ -24,12 +30,10 @@
       width: 100%;
       text-align: center;
     }
-
     .signup-form h2 {
       margin-bottom: 20px;
       font-size: 24px;
     }
-
     .signup-form input {
       width: 100%;
       padding: 12px;
@@ -37,7 +41,6 @@
       border-radius: 5px;
       border: 1px solid #ddd;
     }
-
     .signup-form button {
       width: 100%;
       padding: 12px;
@@ -48,51 +51,31 @@
       border-radius: 5px;
       cursor: pointer;
     }
-
     .signup-form button:hover {
       background-color: #0056b3;
     }
-
     .terms-container {
       display: flex;
       align-items: center;
       margin-top: 10px;
       font-size: 14px;
     }
-
     .terms-container a {
       margin-left: 5px;
       color: #007bff;
       text-decoration: none;
     }
-
     .terms-container a:hover {
       text-decoration: underline;
     }
-
-    .login-link {
-      margin-top: 20px;
-    }
-
-    .login-link a {
-      color: #007bff;
-      text-decoration: none;
-    }
-
-    .login-link a:hover {
-      text-decoration: underline;
-    }
-
     @media (max-width: 600px) {
       .signup-form {
         padding: 20px;
         max-width: 300px;
       }
-
       .signup-form h2 {
         font-size: 20px;
       }
-
       .signup-form input,
       .signup-form button {
         font-size: 14px;
@@ -101,7 +84,6 @@
   </style>
 </head>
 <body>
-  <!-- Vue.js App -->
   <div id="app">
     <div class="signup-container">
       <div class="signup-form">
@@ -119,7 +101,6 @@
           </div>
 
           <button type="submit">Signup</button>
-          <p class="login-link">Already have an account? <a href="login.html">Login</a></p> <!-- Updated link -->
         </form>
       </div>
     </div>
@@ -149,7 +130,7 @@
             return;
           }
           alert('Form submitted successfully');
-          window.location.href = 'login.html'; // Redirect to login page after form submission
+          window.location.href = 'attendee.html'; // Redirect to attendee page after form submission
         },
       },
     });
