--- a/home.html
+++ b/home.html
@@ -41,13 +41,13 @@
       <div class="col-md-5 mb-3">
         <div class="button-box organiser-box p-4">
           <p>{{ organiserText }}</p>
-          <a href="organiser.html" class="btn btn-primary">{{ organiserButton }}</a>
+          <a href="orgsign.html" class="btn btn-primary">{{ organiserButton }}</a>
         </div>
       </div>
       <div class="col-md-5 mb-3">
         <div class="button-box attendee-box p-4">
           <p>{{ attendeeText }}</p>
-          <a href="attendee.html" class="btn btn-primary">{{ attendeeButton }}</a>
+          <a href="usersign.html" class="btn btn-primary">{{ attendeeButton }}</a>
         </div>
       </div>
     </div>
@@ -72,3 +72,4 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
