--- a/orgsign.htm
+++ b/orgsign.htm
@@ -8,15 +8,17 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #0c1a4b;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
+      background-image: url('https://img.freepik.com/premium-photo/hotel-event-conference-planning_1314467-82074.jpg');
+      background-size: cover;
+      background-position: center;
     }
     .signup-container {
-      background-color: white;
+      background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent white */
       padding: 30px;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -130,7 +132,7 @@
         submitForm() {
           if (this.isPasswordMatch) {
             alert('Form submitted successfully!');
-            window.location.href = 'login.html'; // Redirect to the login page
+            window.location.href = 'organiser.html'; // Redirect to organiser page
           } else {
             alert('Passwords do not match.');
           }
